--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,7 +27,7 @@
                     <Fluent:Button Header="大ボタン"
                    KeyTip="BI"
                    LargeIcon="./image/icon_113430_256.png"/>
-
+        
                     <Fluent:Button Header="中ボタン"
                    KeyTip="MI"
                    Size="Middle"
@@ -49,6 +49,12 @@
 
         </Fluent:Ribbon>
 
+        <Grid Grid.Row="1">
+            <TextBlock>My first window containing a Ribbon and something else.</TextBlock>
+            <ListBox>
+                <ComboBox x:Name="audio_device_list" Width="120" SelectionChanged="ComboBox_SelectionChanged" IsReadOnly="True"/>
+            </ListBox>
+        </Grid>
 
     </Grid>
 </Fluent:RibbonWindow>
