--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,9 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"                  
-        xmlns:Fluent="urn:fluent-ribbon"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SoundReader"
+        xmlns:Fluent="urn:fluent-ribbon" 
         mc:Ignorable="d"
         Title="MainWindow" Height="550" Width="800">
     <Grid>
@@ -19,6 +19,8 @@
                 <Fluent:Backstage>
                 </Fluent:Backstage>
             </Fluent:Ribbon.Menu>
+
+            <!--Tabs-->
             <Fluent:RibbonTabItem Header="タブ1" KeyTip="T1">
                 <Fluent:RibbonGroupBox
                    Header="ボタン"
@@ -27,7 +29,7 @@
                     <Fluent:Button Header="大ボタン"
                    KeyTip="BI"
                    LargeIcon="./image/icon_113430_256.png"/>
-        
+
                     <Fluent:Button Header="中ボタン"
                    KeyTip="MI"
                    Size="Middle"
@@ -48,14 +50,19 @@
             </Fluent:RibbonTabItem>
 
         </Fluent:Ribbon>
-
         <Grid Grid.Row="1">
             <TextBlock>My first window containing a Ribbon and something else.</TextBlock>
             <ListBox>
-                <ComboBox x:Name="audio_device_list" Width="483" SelectionChanged="audio_device_list_SelectionChanged" DropDownOpened="audio_device_list_DropDownOpened" IsReadOnly="True"/>
+                <ComboBox x:Name="audio_device_list"
+                    Width="483"
+                    SelectionChanged="audio_device_list_SelectionChanged"
+                    DropDownOpened="audio_device_list_DropDownOpened"
+                    IsReadOnly="True"/>
             </ListBox>
+            <TextBox Height="19" Text="Base file name" TextWrapping="Wrap" Width="74"/>
+            <TextBox Height="19" Text="numbering" TextWrapping="Wrap" Width="74" Margin="489,190,230.6,191"/>
+
             <Slider x:Name="Input_volume" Width="120" Margin="94,67,586,-68" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
         </Grid>
-
     </Grid>
 </Fluent:RibbonWindow>
