--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,9 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"                  
-        xmlns:Fluent="urn:fluent-ribbon"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SoundReader"
+        xmlns:Fluent="urn:fluent-ribbon" 
         mc:Ignorable="d"
         Title="MainWindow" Height="550" Width="800">
     <Grid>
@@ -19,6 +19,8 @@
                 <Fluent:Backstage>
                 </Fluent:Backstage>
             </Fluent:Ribbon.Menu>
+
+            <!--Tabs-->
             <Fluent:RibbonTabItem Header="タブ1" KeyTip="T1">
                 <Fluent:RibbonGroupBox
                    Header="ボタン"
@@ -48,7 +50,7 @@
             </Fluent:RibbonTabItem>
 
         </Fluent:Ribbon>
-
-
+        <Grid Grid.Row="1">
+        </Grid>
     </Grid>
 </Fluent:RibbonWindow>
