--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -60,14 +60,18 @@
                           DropDownOpened="audio_device_list_DropDownOpened"
                           IsReadOnly="True"/>
             </ListBox>
+
             <Label Content="Base file name" Height="30" Margin="470,185,232.6,185"/>
             <Label Content="numbering" Height="30" Margin="636,185,80.6,185"/>
             <Label Content="_" Height="30" Margin="605,211,170.6,159"/>
-
             <TextBox x:Name="Rec_numbering_filename" Height="23" TextWrapping="Wrap" Text="1" Width="120" Margin="636,215,37.6,162" />
             <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120" Margin="470,215,203.6,162"/>
+            <Button x:Name="Rec_num_prev" Content="prev." Width="51" Margin="636,243,106.6,137"/>
+            <Button x:Name="Rec_num_next" Content="next" Width="51" Margin="705,243,37.6,137"/>
+
             <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
             <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click"/>
+
             <Slider x:Name="Input_volume" Width="120" Margin="94,67,586,-68" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
         </Grid>
 
