--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -70,7 +70,7 @@
             <Button x:Name="Rec_num_next" Content="next" Width="51" Margin="705,243,37.6,137" Click="Rec_num_next_Click"/>
 
             <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
-            <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click"/>
+            <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
 
             <Slider x:Name="Input_volume" Width="120" Margin="94,67,586,-68" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
         </Grid>
