--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -79,7 +79,7 @@
             <Button x:Name="Rec_num_prev" Content="prev." Width="51" Margin="636,243,106.6,137" Click="Rec_num_prev_Click"/>
             <Button x:Name="Rec_num_next" Content="next" Width="51" Margin="705,243,37.6,137" Click="Rec_num_next_Click"/>
 
-            <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
+            <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_optional_Click"/>
             <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
 
             <Slider x:Name="Input_volume" Margin="23,96,581.6,275" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
