--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -176,6 +176,26 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="0.25*" />
             </Grid.ColumnDefinitions>
+        <Viewbox Grid.Row="1" Stretch="Uniform">
+            <Canvas Width="1" Height="0.52">
+                <Image Width="0.74" Height="0.185" x:Name="waveDisplay" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <Image.RenderTransform>
+                        <TranslateTransform X="0.13" Y="0.0353"/>
+                    </Image.RenderTransform>
+                </Image>
+            </Canvas>
+        </Viewbox>
+        <Grid Grid.Row="2">
+            <TextBlock Text="My first window containing a Ribbon and something els"/>
+            <ListBox>
+                <ComboBox x:Name="audio_device_list"
+                          Width="483"
+                          SelectionChanged="audio_device_list_SelectionChanged"
+                          DropDownOpened="audio_device_list_DropDownOpened"
+                          IsReadOnly="True"/>
+            </ListBox>
+
+
 
             <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Panel.ZIndex="1">
                 <Border
