--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -60,7 +60,16 @@
 
         </Fluent:Ribbon>
 
-        <Grid Grid.Row="1">
+        <Viewbox Grid.Row="1" Stretch="Uniform">
+            <Canvas Width="1" Height="0.52">
+                <Image Width="0.74" Height="0.185" x:Name="waveDisplay" VerticalAlignment="Top" HorizontalAlignment="Left">
+                    <Image.RenderTransform>
+                        <TranslateTransform X="0.13" Y="0.0353"/>
+                    </Image.RenderTransform>
+                </Image>
+            </Canvas>
+        </Viewbox>
+        <Grid Grid.Row="2">
             <TextBlock Text="My first window containing a Ribbon and something els"/>
             <ListBox>
                 <ComboBox x:Name="audio_device_list"
@@ -70,17 +79,16 @@
                           IsReadOnly="True"/>
             </ListBox>
 
+            <Label Content="Base file name" Height="30"/>
+            <Label Content="numbering" Height="30" />
+            <Label Content="_" Height="30" />
+            <TextBox x:Name="Rec_numbering_filename" Height="23" TextWrapping="Wrap" Text="1" Width="120"/>
+            <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120"/>
+            <Button x:Name="Rec_num_prev" Content="prev." Width="51" Click="Rec_num_prev_Click"/>
+            <Button x:Name="Rec_num_next" Content="next" Width="51" Click="Rec_num_next_Click"/>
 
-            <Label Content="Base file name" Height="30" Margin="470,185,232.6,185"/>
-            <Label Content="numbering" Height="30" Margin="636,185,80.6,185"/>
-            <Label Content="_" Height="30" Margin="605,211,170.6,159"/>
-            <TextBox x:Name="Rec_numbering_filename" Height="23" TextWrapping="Wrap" Text="1" Width="120" Margin="636,215,37.6,162" />
-            <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120" Margin="470,215,203.6,162"/>
-            <Button x:Name="Rec_num_prev" Content="prev." Width="51" Margin="636,243,106.6,137" Click="Rec_num_prev_Click"/>
-            <Button x:Name="Rec_num_next" Content="next" Width="51" Margin="705,243,37.6,137" Click="Rec_num_next_Click"/>
-
-            <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
-            <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
+            <Button x:Name="Rec_start" Content="Start" Width="75" Click="Rec_start_Click"/>
+            <Button x:Name="Rec_stop" Content="Stop" Width="75" Click="Rec_stop_Click" IsEnabled="False"/>
 
             <Slider x:Name="Input_volume" Margin="23,96,581.6,275" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
             <ProgressBar x:Name="Rec_Level_Meter" Height="105" Width="26" Margin="61,192,713,116" Orientation="Vertical" SmallChange="0.01" Foreground="#FFCCFF66"/>
