--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -61,6 +61,7 @@
                           IsReadOnly="True"/>
             </ListBox>
 
+
             <Label Content="Base file name" Height="30" Margin="470,185,232.6,185"/>
             <Label Content="numbering" Height="30" Margin="636,185,80.6,185"/>
             <Label Content="_" Height="30" Margin="605,211,170.6,159"/>
@@ -72,7 +73,53 @@
             <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
             <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
 
-            <Slider x:Name="Input_volume" Width="120" Margin="94,67,586,-68" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
+            <Slider x:Name="Input_volume" Margin="23,96,581.6,275" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
+
+            <Fluent:StatusBar Margin="0,379,-0.4,-2" Background="#FFBFE3FF" Height="20">
+                <Fluent:StatusBarItem Title="Left placed item"
+                          Value="150"
+                          HorizontalAlignment="Left">
+                    <TextBlock Text="  device status" />
+                </Fluent:StatusBarItem>
+
+                <Separator HorizontalAlignment="Left" />
+
+                <Fluent:StatusBarItem Title="First Left placed item"
+                          Value="150"
+                          HorizontalAlignment="Left">
+                    <TextBlock x:Name="Rec_status" Text="" />
+                </Fluent:StatusBarItem>
+
+                <Separator HorizontalAlignment="Left" />
+
+                <Fluent:StatusBarItem Title="Second left placed item"
+                          Value="Value shown in ContextMenu"
+                          HorizontalAlignment="Left">
+                    <TextBlock x:Name="Rec_ch" Text="" />
+                </Fluent:StatusBarItem>
+
+                <Separator HorizontalAlignment="Left" />
+
+                <Fluent:StatusBarItem Title="Third left placed item"
+                          Value="Value shown in ContextMenu"
+                          HorizontalAlignment="Left">
+                    <TextBlock x:Name="Rec_bit" Text="" />
+                </Fluent:StatusBarItem>
+                
+                <Separator HorizontalAlignment="Left" />
+
+                <Fluent:StatusBarItem Title="Forth left placed item"
+                          Value="Value shown in ContextMenu"
+                          HorizontalAlignment="Left">
+                    <TextBlock x:Name="Rec_sample" Text="" />
+                </Fluent:StatusBarItem>
+
+                <Separator HorizontalAlignment="Left" />
+
+                <Fluent:StatusBarItem Title="Item placed on the right side"
+                          HorizontalAlignment="Right"
+                          Value="Your value which is also used as content if no content is set." />
+            </Fluent:StatusBar>
         </Grid>
 
     </Grid>
