--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,9 +34,72 @@
                    Header="ボタン"
                    KeyTip="B">
                     <!-- この中にコントロールを配置する -->
-                    <Fluent:Button Header="保存先"
+                    <Fluent:Button Header="作業フォルダ"
                    KeyTip="BI"
-                   Click="Button_Click_Saveto"
+                   Click="Button_Click_Workin"
+                   LargeIcon="./image/icon_113430_256.png"/>
+
+                    <Fluent:Button Header="中ボタン"
+                   KeyTip="MI"
+                   Size="Middle"
+                   Click="Button_Click_Render"
+                   Icon="./image/icon_113430_256.png"/>
+
+                    <Fluent:Button Header="小ボタン"
+                   KeyTip="SM"
+                   Size="Small"
+                   Icon="./image/icon_113430_256.png"/>
+
+                </Fluent:RibbonGroupBox>
+            </Fluent:RibbonTabItem>
+
+            <Fluent:RibbonTabItem Header="録音" KeyTip="T2">
+                <Fluent:RibbonGroupBox
+                   Header="ボタン"
+                   KeyTip="B">
+                    <!-- この中にコントロールを配置する -->
+                    <Fluent:Button Header="大ボタン"
+                   KeyTip="BI"
+                   LargeIcon="./image/icon_113430_256.png"/>
+
+                    <Fluent:Button Header="中ボタン"
+                   KeyTip="MI"
+                   Size="Middle"
+                   Icon="./image/icon_113430_256.png"/>
+
+                    <Fluent:Button Header="小ボタン"
+                   KeyTip="SM"
+                   Size="Small"
+                   Icon="./image/icon_113430_256.png"/>
+                    
+
+                </Fluent:RibbonGroupBox>
+                <Fluent:RibbonGroupBox
+                   Header="ボタン"
+                   KeyTip="B">
+                    <!-- この中にコントロールを配置する -->
+                    <ListBox>
+                        <ComboBox x:Name="audio_device_list"
+                          
+                          SelectionChanged="audio_device_list_SelectionChanged"
+                          DropDownOpened="audio_device_list_DropDownOpened"
+                          IsReadOnly="True"/>
+                    </ListBox>
+                    <Slider x:Name="Input_volume" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01" MinWidth="100"/>
+
+
+                </Fluent:RibbonGroupBox>
+
+            </Fluent:RibbonTabItem>
+
+            <Fluent:RibbonTabItem Header="再生" KeyTip="T3">
+                <Fluent:RibbonGroupBox
+                   Header="ボタン"
+                   KeyTip="B"
+                   HorizontalAlignment="Left">
+                    <!-- この中にコントロールを配置する -->
+                    <Fluent:Button Header="大ボタン"
+                   KeyTip="BI"
                    LargeIcon="./image/icon_113430_256.png"/>
 
                     <Fluent:Button Header="中ボタン"
@@ -49,40 +112,32 @@
                    Size="Small"
                    Icon="./image/icon_113430_256.png"/>
 
+
                 </Fluent:RibbonGroupBox>
+
+                <!--<Separator HorizontalAlignment="Left" />-->
+
+                <Fluent:RibbonGroupBox
+                   Header="ボタン"
+                   KeyTip="B"
+                   HorizontalAlignment="Right">
+                    <!-- この中にコントロールを配置する -->
+                    <Fluent:Button Header="画面遷移"
+                   KeyTip="BI"
+                   Click="Button_Click_Recorder"
+                   LargeIcon="./image/icon_113430_256.png"/>
+                </Fluent:RibbonGroupBox>
+
             </Fluent:RibbonTabItem>
 
-            <Fluent:RibbonTabItem Header="タブ2" KeyTip="T2">
-            </Fluent:RibbonTabItem>
-
-            <Fluent:RibbonTabItem Header="タブ3" KeyTip="T3">
+            <Fluent:RibbonTabItem Header="定位" KeyTip="T3">
             </Fluent:RibbonTabItem>
 
         </Fluent:Ribbon>
 
         <Grid Grid.Row="1">
-            <TextBlock Text="My first window containing a Ribbon and something els"/>
-            <ListBox>
-                <ComboBox x:Name="audio_device_list"
-                          Width="483"
-                          SelectionChanged="audio_device_list_SelectionChanged"
-                          DropDownOpened="audio_device_list_DropDownOpened"
-                          IsReadOnly="True"/>
-            </ListBox>
+            <Frame Name="frame" NavigationUIVisibility="Hidden"/>
 
-
-            <Label Content="Base file name" Height="30" Margin="470,185,232.6,185"/>
-            <Label Content="numbering" Height="30" Margin="636,185,80.6,185"/>
-            <Label Content="_" Height="30" Margin="605,211,170.6,159"/>
-            <TextBox x:Name="Rec_numbering_filename" Height="23" TextWrapping="Wrap" Text="1" Width="120" Margin="636,215,37.6,162" />
-            <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120" Margin="470,215,203.6,162"/>
-            <Button x:Name="Rec_num_prev" Content="prev." Width="51" Margin="636,243,106.6,137" Click="Rec_num_prev_Click"/>
-            <Button x:Name="Rec_num_next" Content="next" Width="51" Margin="705,243,37.6,137" Click="Rec_num_next_Click"/>
-
-            <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
-            <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
-
-            <Slider x:Name="Input_volume" Margin="23,96,581.6,275" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
             <ProgressBar x:Name="Rec_Level_Meter" Height="105" Width="26" Margin="61,192,713,116" Orientation="Vertical" SmallChange="0.01" Foreground="#FFCCFF66"/>
             <TextBlock x:Name="Rec_Level_Meter_Value" Height="48" TextWrapping="Wrap" Text="0" Width="42" Margin="100,228,658,137" FontSize="18"/>
 
