add timecount for recording
- count down before recording
- count up while recording

--- a/Recorder.xaml
+++ b/Recorder.xaml
@@ -64,8 +64,60 @@
                 </StackPanel>
             </Grid>
 
-        <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
-        <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
+            <rg:ResponsiveGrid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="12" MaxDivision="12" BreakPoints="345, 567, 789" Panel.ZIndex="0">
+                <Border rg:ResponsiveGrid.XS="12" rg:ResponsiveGrid.SM="10" Height="Auto">
+                    <Label Content="numbering" Height="30"/>
+                </Border>
+                <Border Height="80" rg:ResponsiveGrid.SM="1" >
+                    <Label Content="_" Height="30" />
+                </Border>
+                <Border rg:ResponsiveGrid.SM="4">
+                    <Label FontSize="50" Grid.Row="0">Page1</Label>
+                    <!---->
+                </Border>
+                <Border rg:ResponsiveGrid.SM="1" >
+                    <Button Click="Button_Click">ページ２へ遷移</Button>
+                </Border>
+                <Border rg:ResponsiveGrid.SM="1" >
+                    <WrapPanel Orientation="Horizontal">
+                        <Label Content="Base file name : "/>
+                        <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120"/>
+                    </WrapPanel>
+                </Border>
+                <Border Height="80" rg:ResponsiveGrid.SM="1" >
+                    <Fluent:Spinner KeyTip="P1"
+                                     Name="Rec_numbering_filename"
+                                     Increment="1"
+                                     Format="0"
+                                     />
+                </Border>
+                <Border rg:ResponsiveGrid.SM="2" >
+                    <WrapPanel Orientation="Horizontal">
+                        <Label Content="time[s] : "/>
+                        <Label Name="time_count" Content="0" FontSize="48"/>
+                    </WrapPanel>
+                </Border>
+                <Border rg:ResponsiveGrid.SM="1" >
+                    <WrapPanel Orientation="Horizontal">
+                        <Label Content="recording time length[s] : "/>
+                        <Fluent:Spinner KeyTip="P1"
+                                     Name="Rec_time"
+                                     Increment="0.1"
+                                     Format="0.0[s]"
+                                     Value="10.0"
+                                     />
+                    </WrapPanel>
+                </Border>
+                <Border rg:ResponsiveGrid.SM="1" >
+                    <local:ToggleSwitch/>
+                </Border>
+                <Border rg:ResponsiveGrid.SM="1" >
+                    <WrapPanel Orientation="Horizontal">
+                        <Button x:Name="Rec_start" Content="Start" Width="75" Click="Rec_start_Click"/>
+                        <Button x:Name="Rec_stop" Content="Stop" Width="75" Click="Rec_stop_Click" IsEnabled="False"/>
+                    </WrapPanel>
+                </Border>
+            </rg:ResponsiveGrid>
         </Grid>
     </Grid>
 </Page>
