--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -63,17 +63,17 @@
             </ListBox>
 
 
-            <Label Content="Base file name" Height="30" Margin="470,185,232.6,185"/>
+            <Label Content="Base file name" Height="30" Margin="498,185,204.6,185"/>
             <Label Content="numbering" Height="30" Margin="636,185,80.6,185"/>
-            <Label Content="_" Height="30" Margin="605,211,170.6,159"/>
+            <Label Content="_" Height="30" Margin="618,211,157.6,159" FontSize="16"/>
             <TextBox x:Name="Rec_numbering_filename" Height="23" TextWrapping="Wrap" Text="1" Width="120" Margin="636,215,37.6,162" />
-            <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120" Margin="470,215,203.6,162"/>
+            <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120" Margin="493,215,180.6,162"/>
             <Button x:Name="Rec_num_prev" Content="prev." Width="51" Margin="636,243,106.6,137" Click="Rec_num_prev_Click"/>
             <Button x:Name="Rec_num_next" Content="next" Width="51" Margin="705,243,37.6,137" Click="Rec_num_next_Click"/>
 
             
-            <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_optional_Click"/>
-            <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
+            <Button x:Name="Rec_start" Content="Start" Width="75" Margin="502,311,216.6,64" Click="Rec_start_optional_Click"/>
+            <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="638,311,80.6,64" Click="Rec_stop_Click" IsEnabled="False"/>
 
             <Slider x:Name="Input_volume" Margin="23,96,581.6,275" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01"/>
 
@@ -123,8 +123,8 @@
                           Value="Your value which is also used as content if no content is set." />
             </Fluent:StatusBar>
             
-            <TextBox x:Name="Rec_time" TextWrapping="Wrap" Text="10" Width="120" Margin="367,357,313,29"/>
-            <Label Content="Time" Margin="367,320,341,68" Height="32"/>
+            <TextBox x:Name="Rec_time" TextWrapping="Wrap" Text="10" Width="120" Margin="636,144,37.6,233" Height="23"/>
+            <Label Content="Time" Margin="636,114,71.6,256" Height="30"/>
             <Label x:Name="timecount" Content="-" Margin="50,118,480,33" FontSize="200"/>
         </Grid>
 
