--- a/App.xaml
+++ b/App.xaml
@@ -10,9 +10,10 @@
             <Color x:Key="scarlet">#d3381c</Color>
             <Color x:Key="wisteria">#a15dc4</Color>
             <Color x:Key="lilac">#ff7058a3</Color>
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
-                <ResourceDictionary Source="/TabControlMenu.xaml" />
+                <ResourceDictionary Source="TabControlMenu.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
