--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,15 @@
 ﻿<Fluent:RibbonWindow x:Class="SoundReader.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SoundReader"
-        xmlns:Fluent="urn:fluent-ribbon" 
-        mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="800">
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                     xmlns:local="clr-namespace:SoundReader"
+                     xmlns:Fluent="urn:fluent-ribbon" 
+                     mc:Ignorable="d"
+                     Title="MainWindow"
+                     Height="550" Width="800"
+                     MinHeight="220" MinWidth="320"
+                     >
     <Window.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
         <Color x:Key="light_green">#ccff66</Color>
